tests/parse_print/random_perturb/set01/change-10/stderr.expected
Error:
    tests/parse_print/random_perturb/set01/change-10/change-10.essence:1:10:
  |
1 | language E@sence 1.3
  |          ^
Syntax Error: Not a valid language name

tests/parse_print/random_perturb/set01/change-10/change-10.essence:1:11:
  |
1 | language E@sence 1.3
  |           ^^^^^^^^^^
Skipped tokens
